--- a/README
+++ b/README
@@ -1,15 +1,1 @@
-Hello all!
-
-This is the code to my personal website. 
-You may find it a bit odd that I'm including it here on github for all to see, but frankly, I think that's how it ought to be!!!
-I work with rails and Mootools and am working daily to learn enough about each to become part of the the communities, respectively.
-
-In this website, you'll find that I work with the rails mootool driver to make all of my js unobtrusive.  
-You can also find some cool things I'm working on hacking up like a persistent header plugin for mootools that I couldn't seem to find anywhere else.
-
-My goal is to make all of the code I write available to anyone to enrich the open source community.
-
-Feel free to look around and steal any ideas as you will.  If you end up using a plugin found here, don't be afraid to give some credit :)
-
-Good luck hacking,
-Austin
+Old personal website.
